--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="uk"><head><meta charset="utf-8"/><title>Formik ToDo</title><meta name="viewport" content="width=device-width,initial-scale=1"/><script defer="defer" src="/static/js/main.b531a81b.js"></script></head><body><div id="root"></div></body></html>
+<!doctype html><html lang="uk"><head><meta charset="utf-8"/><title>Formik ToDo</title><meta name="viewport" content="width=device-width,initial-scale=1"/><script defer="defer" src="/js_hw_28_1/static/js/main.b531a81b.js"></script></head><body><div id="root"></div></body></html>
